[gd_scene load_steps=6 format=3 uid="uid://bpjyigrxmafpo"]

[ext_resource type="Script" path="res://Objects/Bullet/bullet.gd" id="1_5ic7v"]
[ext_resource type="PackedScene" uid="uid://bp02tptvdjqce" path="res://Components/Hitbox/hitbox.tscn" id="1_666do"]
[ext_resource type="Texture2D" uid="uid://hoqmxhp5bhdr" path="res://Assets/0x72_16x16RobotTileset.v1.png" id="3_hjsn2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_55y4s"]
atlas = ExtResource("3_hjsn2")
region = Rect2(96, 144, 8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjj5e"]
size = Vector2(8, 2)

[node name="Bullet" type="Node2D"]
script = ExtResource("1_5ic7v")

[node name="Hitbox" parent="." instance=ExtResource("1_666do")]
damage = 1

[node name="Sprite2D" type="Sprite2D" parent="Hitbox"]
rotation = 1.5708
texture = SubResource("AtlasTexture_55y4s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_yjj5e")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Hitbox"]
rect = Rect2(-20, -20, 40, 40)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="screen_exited" from="Hitbox/VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
